--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+4
+  flutter_bloc: ^3.2.0
+  equatable: ^1.1.1
+
   font_awesome_flutter: ^8.7.0
 
 dev_dependencies:
