--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  font_awesome_flutter: ^8.7.0
   http: ^0.12.0+4
   flutter_bloc: ^3.2.0
   equatable: ^1.1.1
-
-  font_awesome_flutter: ^8.7.0
+  json_annotation: ^3.0.1
+  meta: ^1.1.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.8.1
+  freezed: ^0.1.3+1
+  json_serializable: ^3.2.5
 
 
 # For information on the generic Dart part of this file, see the
