--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   equatable: ^1.1.1
   json_annotation: ^3.0.1
   meta: ^1.1.8
+  fluttertoast: ^4.0.0
 
 dev_dependencies:
   flutter_test:
