--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,8 +1,17 @@
+include: package:lint/analysis_options.yaml
+
 analyzer:
   strong-mode:
     implicit-casts: false
     implicit-dynamic: false
 
+  errors:
+    # TODO: re-enable this when going to production
+    - avoid_print: false
+
   exclude:
     - lib/**/*.freezed.dart
     - lib/**/*.g.dart
+
+linter:
+  rules:
