--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dev_dependencies:
   build_runner: ^1.8.1
   freezed: ^0.1.3+1
   json_serializable: ^3.2.5
+  lint: ^1.1.1
 
 
 # For information on the generic Dart part of this file, see the
