--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,13 +5,13 @@ analyzer:
     implicit-casts: false
     implicit-dynamic: false
 
-  errors:
-    # TODO: re-enable this when going to production
-    - avoid_print: false
-
   exclude:
     - lib/**/*.freezed.dart
     - lib/**/*.g.dart
 
 linter:
   rules:
+    prefer_constructors_over_static_methods: false
+    avoid_positional_boolean_parameters: false
+    # TODO: re-enable this when going to production
+    avoid_print: false
