--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   json_annotation: ^3.0.1
   meta: ^1.1.8
   fluttertoast: ^4.0.0
+  flutter_udid: ^1.0.1
 
 dev_dependencies:
   flutter_test:
