--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_dotenv: ^2.1.0
   yaml: ^2.2.0
   basic_utils: ^2.5.3
+  share: ^0.6.4
 
 dev_dependencies:
   flutter_test:
