--- a/config/.env.example
+++ b/config/.env.example
@@ -1,3 +1,4 @@
 ENV = dev
 BACKEND_URL = http://192.168.178.20:5000/stimmungsring
-FORCE_ONBOARDING = false
+USE_FAKE_DEVICE_ID = false
+FAKE_DEVICE_ID = 0000
