--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,12 @@ dependencies:
   yaml: ^2.2.0
   basic_utils: ^2.5.3
   share: ^0.6.4
+  built_collection: ^4.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.8.1
-  freezed: ^0.1.3+1
   json_serializable: ^3.2.5
   lint: ^1.1.1
 
