Replace app env with explicit chaos monkey flag

--- a/config/.env.example
+++ b/config/.env.example
@@ -1,4 +1,4 @@
-ENV = dev
 BACKEND_URL = http://192.168.178.20:5000/stimmungsring
 USE_FAKE_DEVICE_ID = false
 FAKE_DEVICE_ID = 0000
+CHAOS_MONKEY_ENABLED = true
