--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: stimmungsringeapp
-description: Virtuelle Stimmungsringe
+name: familiarise
+description: Familiarise App
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
