--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,18 +23,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  font_awesome_flutter: ^8.7.0
-  http: ^0.12.0+4
-  flutter_bloc: ^3.2.0
+  font_awesome_flutter: ^8.8.1
+  http: ^0.12.1
+  flutter_bloc: ^4.0.0
   equatable: ^1.1.1
   json_annotation: ^3.0.1
   meta: ^1.1.8
   fluttertoast: ^4.0.0
   flutter_udid: ^1.0.1
   flutter_dotenv: ^2.1.0
-  yaml: ^2.2.0
+  yaml: ^2.2.1
   basic_utils: ^2.5.3
-  share: ^0.6.4
+  share: ^0.6.4+1
   built_collection: ^4.3.2
 
 dev_dependencies:
@@ -42,7 +42,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^1.8.1
   json_serializable: ^3.2.5
-  lint: ^1.1.1
+  lint: ^1.2.0
 
 
 # For information on the generic Dart part of this file, see the
