--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   basic_utils: ^2.5.3
   share: ^0.6.4+1
   built_collection: ^4.3.2
+  cached_network_image: 2.2.0+1
 
 dev_dependencies:
   flutter_test:
