--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   share: ^0.6.4+1
   built_collection: ^4.3.2
   cached_network_image: 2.2.0+1
+  carousel_slider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
