#13 Add app icons, change display name

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="familiariseapp"
+        android:label="Familiarise"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name="de.familiarise.app.MainActivity"
