--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,12 @@ dev_dependencies:
   build_runner: ^1.10.1
   json_serializable: ^3.2.5
   lint: ^1.2.0
+  flutter_launcher_icons: ^0.7.5
 
+flutter_icons:
+  image_path: 'assets/images/app_icon.png'
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
