Fix settings page appearance on large screens and in dark mode

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ config/.env*
 **/ios/**/.symlinks/
 **/ios/**/profile
 **/ios/**/xcuserdata
+**/ios/**/.last_build_id
 **/ios/.generated/
 **/ios/Flutter/App.framework
 **/ios/Flutter/Flutter.framework
