--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   built_collection: ^4.3.2
   cached_network_image: 2.2.0+1
   carousel_slider: ^2.2.0
+  firebase_messaging: ^7.0.3
 
 dev_dependencies:
   flutter_test:
