Move to firebase_messaging plugin 8.0.0_dev.10
Add hooks for all kinds of interactions with notifications and messages:

- background/stopped app/foreground push message
- background/stopped app push notification click

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   built_collection: ^4.3.2
   cached_network_image: 2.2.0+1
   carousel_slider: ^2.2.0
-  firebase_messaging: ^7.0.3
+  firebase_core: ^0.5.3
+  firebase_messaging: ^8.0.0-dev.10
 
 dev_dependencies:
   flutter_test:
