--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="de.familiarise.app.Application"
+        android:name="io.flutter.app.FlutterApplication"
         android:label="Familiarise"
         android:icon="@mipmap/ic_launcher">
         <activity
