--- a/config/.env.example
+++ b/config/.env.example
@@ -1,4 +1,5 @@
-BACKEND_URL = http://192.168.178.20:5000/stimmungsring
+BACKEND_URL=http://192.168.178.20:5000/stimmungsring
+DEBUG=true
 USE_FAKE_DEVICE_ID = false
 FAKE_DEVICE_ID = 0000
 CHAOS_MONKEY_ENABLED = true
