--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,6 @@
 # production config - see README.md
 backendUrl:
   http://wvsvhackvirtuellestimmungsringe-env.eba-eug7bzt6.eu-central-1.elasticbeanstalk.com/stimmungsring
+debug: false
 useFakeDeviceId: false
 chaosMonkeyEnabled: false
