--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: Familiarise App
 version: 1.0.0+3
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,32 +22,32 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  font_awesome_flutter: ^8.8.1
-  http: ^0.12.1
-  flutter_bloc: ^6.0.1
-  equatable: ^1.1.1
-  json_annotation: ^3.0.1
-  meta: ^1.1.8
-  fluttertoast: ^7.0.2
+  cupertino_icons: ^1.0.0
+  font_awesome_flutter: ^8.11.0
+  http: ^0.12.2
+  flutter_bloc: ^6.1.1
+  equatable: ^1.2.5
+  json_annotation: ^3.1.1
+  meta: ^1.3.0-nullsafety.3
+  fluttertoast: ^7.1.6
   flutter_udid: ^1.0.1
   flutter_dotenv: ^2.1.0
   yaml: ^2.2.1
-  basic_utils: ^2.5.3
-  share: ^0.6.4+1
+  basic_utils: ^2.7.0-rc.4
+  share: ^0.6.5+4
   built_collection: ^4.3.2
-  cached_network_image: 2.2.0+1
-  carousel_slider: ^2.2.0
+  cached_network_image: ^2.5.0
+  carousel_slider: ^2.3.1
   firebase_core: ^0.5.3
   firebase_messaging: ^8.0.0-dev.11
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.10.1
-  json_serializable: ^3.2.5
-  lint: ^1.2.0
-  flutter_launcher_icons: ^0.7.5
+  build_runner: ^1.10.11
+  json_serializable: ^3.5.1
+  lint: ^1.3.0
+  flutter_launcher_icons: ^0.8.1
 
 flutter_icons:
   image_path: 'assets/images/app_icon.png'
