--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,3 +95,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: WeatherIcons
+      fonts:
+        - asset: assets/fonts/WeatherIcons.ttf
