--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,37 +17,34 @@ environment:
   sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
+  basic_utils: ^3.0.2
+  built_collection: ^5.0.0
+  cached_network_image: ^3.0.0
+  carousel_slider: ^4.0.0-nullsafety.0
+  cupertino_icons: ^1.0.0
+  equatable: ^2.0.0
+  firebase_core: ^1.0.3
+  firebase_messaging: ^9.1.1
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  font_awesome_flutter: ^8.11.0
-  http: ^0.12.2
-  flutter_bloc: ^6.1.1
-  equatable: ^1.2.5
-  json_annotation: ^3.1.1
+  flutter_bloc: ^7.0.0
+  flutter_dotenv: ^4.0.0-nullsafety.0
+  flutter_udid: ^2.0.0
+  fluttertoast: ^8.0.4
+  font_awesome_flutter: ^9.0.0
+  http: ^0.13.1
+  json_annotation: ^4.0.1
   meta: ^1.3.0-nullsafety.3
-  fluttertoast: ^7.1.6
-  flutter_udid: ^1.0.1
-  flutter_dotenv: ^2.1.0
-  yaml: ^2.2.1
-  basic_utils: ^2.7.0-rc.4
-  share: ^0.6.5+4
-  built_collection: ^4.3.2
-  cached_network_image: ^2.5.0
-  carousel_slider: ^2.3.1
-  firebase_core: ^0.7.0
-  firebase_messaging: ^8.0.0-dev.12
+  share: ^2.0.1
+  yaml: ^3.1.0
 
 dev_dependencies:
+  build_runner: ^1.12.2
+  flutter_launcher_icons: ^0.9.0
   flutter_test:
     sdk: flutter
-  build_runner: ^1.10.11
-  json_serializable: ^3.5.1
+  json_serializable: ^4.1.0
   lint: ^1.3.0
-  flutter_launcher_icons: ^0.8.1
 
 flutter_icons:
   image_path: 'assets/images/app_icon.png'
