--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,15 @@ config/.env*
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
 
+# Android signing settings
+*.keystore
+**/android/key.properties
+
+# Android app builds
+**/android/app/debug
+**/android/app/profile
+**/android/app/release
+
 # iOS/XCode related
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
