--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dev_dependencies:
 
 flutter_icons:
   image_path: 'assets/images/app_icon.png'
-  android: true
+  android: false
   ios: true
 
 # For information on the generic Dart part of this file, see the
