--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,34 +17,34 @@ environment:
   sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
-  basic_utils: ^3.0.2
-  built_collection: ^5.0.0
-  cached_network_image: ^3.0.0
-  carousel_slider: ^4.0.0-nullsafety.0
-  cupertino_icons: ^1.0.0
-  equatable: ^2.0.0
-  firebase_core: ^1.0.3
-  firebase_messaging: ^9.1.1
+  basic_utils: ^3.6.0
+  built_collection: ^5.1.1
+  cached_network_image: ^3.1.0
+  carousel_slider: ^4.0.0
+  cupertino_icons: ^1.0.3
+  equatable: ^2.0.3
+  firebase_core: ^1.6.0
+  firebase_messaging: ^10.0.7
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.0.0
-  flutter_dotenv: ^4.0.0-nullsafety.0
+  flutter_bloc: ^7.3.0
+  flutter_dotenv: ^5.0.2
   flutter_udid: ^2.0.0
-  fluttertoast: ^8.0.4
-  font_awesome_flutter: ^9.0.0
-  http: ^0.13.1
-  json_annotation: ^4.0.1
-  meta: ^1.3.0-nullsafety.3
-  share: ^2.0.1
+  fluttertoast: ^8.0.8
+  font_awesome_flutter: ^9.1.0
+  http: ^0.13.3
+  json_annotation: ^4.1.0
+  meta: ^1.7.0
+  share: ^2.0.4
   yaml: ^3.1.0
 
 dev_dependencies:
-  build_runner: ^1.12.2
-  flutter_launcher_icons: ^0.9.0
+  build_runner: ^2.1.2
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
-  json_serializable: ^4.1.0
-  lint: ^1.3.0
+  json_serializable: ^5.0.2
+  lint: ^1.7.2
 
 flutter_icons:
   image_path: 'assets/images/app_icon.png'
