--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   built_collection: ^5.1.1
   cached_network_image: ^3.1.0
   carousel_slider: ^4.0.0
+  characters: ^1.1.0
   cupertino_icons: ^1.0.3
   equatable: ^2.0.3
   firebase_core: ^1.6.0
