--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: Familiarise App
 version: 1.0.0+8
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.15.0 <3.0.0'
 
 dependencies:
   basic_utils: ^3.6.0
@@ -25,7 +25,7 @@ dependencies:
   cupertino_icons: ^1.0.3
   equatable: ^2.0.3
   firebase_core: ^1.6.0
-  firebase_messaging: ^10.0.7
+  firebase_messaging: ^11.2.5
   flutter:
     sdk: flutter
   flutter_bloc: ^7.3.0
@@ -34,9 +34,8 @@ dependencies:
   fluttertoast: ^8.0.8
   font_awesome_flutter: ^9.1.0
   http: ^0.13.3
-  json_annotation: ^4.1.0
   meta: ^1.7.0
-  share: ^2.0.4
+  share_plus: ^3.0.4
   yaml: ^3.1.0
 
 dev_dependencies:
@@ -44,7 +43,6 @@ dev_dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
-  json_serializable: ^5.0.2
   lint: ^1.7.2
 
 flutter_icons:
