--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^7.3.0
   flutter_dotenv: ^5.0.2
+  flutter_svg: ^1.0.3
   flutter_udid: ^2.0.0
   fluttertoast: ^8.0.8
   font_awesome_flutter: ^10.1.0
